Fix height of title container to stop it jumping

--- a/style.css
+++ b/style.css
@@ -188,6 +188,7 @@ body {
 .title-container {
 	display: flex;
 	flex-direction: column;
+	height: 122px;
 }
 
 .heading-greeting {
